--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 %:
-	dh $@ --with=autotools_dev,autoreconf,python2 --parallel
+	dh $@ --with=autoreconf,python2 --parallel
 
 override_dh_auto_configure:
 	dh_auto_configure -- --with-liblua --with-liblinear --enable-ipv6
