--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: nmap
 Section: net
 Priority: extra
-Maintainer: Hilko Bengen <bengen@debian.org>
+Maintainer: Debian Security Tools Packaging Team <pkg-security-team@lists.alioth.debian.org>
+Uploaders: Hilko Bengen <bengen@debian.org>
 Build-Depends: debhelper (>=9), dh-autoreconf,
  dh-python,
  bison,
@@ -15,8 +16,8 @@ Build-Depends: debhelper (>=9), dh-autoreconf,
  python (>=2.3.5-7),
 Standards-Version: 3.9.8
 Homepage: http://nmap.org/
-Vcs-Git: git://anonscm.debian.org/users/bengen/nmap.git
-Vcs-Browser: http://anonscm.debian.org/cgit/users/bengen/nmap.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-security/nmap.git
+Vcs-Browser: https://anonscm.debian.org/cgit/pkg-security/nmap.git
 
 Package: nmap
 Architecture: any
