--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: nmap
 Section: net
 Priority: extra
 Maintainer: Debian Security Tools Packaging Team <pkg-security-team@lists.alioth.debian.org>
-Uploaders: Hilko Bengen <bengen@debian.org>
+Uploaders: Hilko Bengen <bengen@debian.org>,
+           Samuel Henrique <saueloph@gmail.com>
 Build-Depends: debhelper (>=9), dh-autoreconf,
  dh-python,
  bison,
