--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: net
 Priority: extra
 Maintainer: Debian Security Tools Packaging Team <pkg-security-team@lists.alioth.debian.org>
 Uploaders: Hilko Bengen <bengen@debian.org>,
-           Samuel Henrique <saueloph@gmail.com>
+           Samuel Henrique <samueloph@gmail.com>
 Build-Depends: debhelper (>=9), dh-autoreconf,
  dh-python,
  bison,
