--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 	dh $@ --with=autoreconf,python2
 
 override_dh_auto_configure:
-	dh_auto_configure -- --with-liblua --with-liblinear --enable-ipv6
+	dh_auto_configure -- --with-liblua --with-liblinear --enable-ipv6 STRIP=/bin/true
 
 override_dh_auto_test:
 
