--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,7 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
 %:
-	dh $@ --with=autoreconf,python2
+	dh $@ --with=python2
 
 override_dh_auto_configure:
 	dh_auto_configure -- --with-liblua --with-liblinear --enable-ipv6 STRIP=/bin/true
