split nmap package
put architecture independent files into new nmap-common package

--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,8 @@ Vcs-Browser: https://anonscm.debian.org/cgit/pkg-security/nmap.git
 
 Package: nmap
 Architecture: any
-Depends: ${misc:Depends},
+Depends: nmap-common (= ${source:Version}),
+         ${misc:Depends},
          ${python:Depends},
          ${shlibs:Depends}
 Recommends: ndiff
@@ -38,6 +39,25 @@ Description: The Network Mapper
  sunRPC scanning, and more. Most Unix and Windows platforms are
  supported in both GUI and commandline modes. Several popular handheld
  devices are also supported, including the Sharp Zaurus and the iPAQ.
+
+Package: nmap-common
+Architecture: all
+Depends: ${misc:Depends}
+Recommends: nmap
+Replaces: nmap (<< 7.60-2~)
+Breaks: nmap (<< 7.60-2~)
+Description: Architecture independent files for nmap
+ Nmap is a utility for network exploration or security auditing. It
+ supports ping scanning (determine which hosts are up), many port
+ scanning techniques, version detection (determine service protocols
+ and application versions listening behind ports), and TCP/IP
+ fingerprinting (remote host OS or device identification). Nmap also
+ offers flexible target and port specification, decoy/stealth scanning,
+ sunRPC scanning, and more. Most Unix and Windows platforms are
+ supported in both GUI and commandline modes. Several popular handheld
+ devices are also supported, including the Sharp Zaurus and the iPAQ.
+ .
+ This package contains the nmap files shared by all architectures.
 
 Package: zenmap
 Architecture: all
