--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,8 @@ override_dh_auto_install:
 	mv debian/tmp/usr/share/man/pt_PT debian/tmp/usr/share/man/pt
 
 override_dh_autoreconf:
-	dh_autoreconf debian/autoreconf.sh
+	dh_autoreconf autoreconf -- -fi --no-recursive \
+		. libdnet-stripped nbase ncat nmap-update nping nsock/src
 
 override_dh_install:
 	dh_install --fail-missing -X/usr/bin/uninstall_ -Xca-bundle.crt -X.pyc
