nmap suggests zenmap

--- a/debian/control
+++ b/debian/control
@@ -29,6 +29,7 @@ Depends: nmap-common (= ${source:Version}),
          ${python:Depends},
          ${shlibs:Depends}
 Recommends: ndiff
+Suggests: zenmap
 Description: The Network Mapper
  Nmap is a utility for network exploration or security auditing. It
  supports ping scanning (determine which hosts are up), many port
