--- a/debian/control
+++ b/debian/control
@@ -20,7 +20,7 @@ Build-Depends: bison,
 Build-Depends-Indep: default-jdk-headless,
                      gcc-mingw-w64-i686
 Standards-Version: 4.1.0
-Homepage: http://nmap.org/
+Homepage: https://nmap.org/
 Vcs-Git: https://anonscm.debian.org/git/pkg-security/nmap.git
 Vcs-Browser: https://anonscm.debian.org/cgit/pkg-security/nmap.git
 
