--- a/debian/control
+++ b/debian/control
@@ -21,8 +21,8 @@ Build-Depends-Indep: default-jdk-headless,
                      gcc-mingw-w64-i686
 Standards-Version: 4.1.0
 Homepage: https://nmap.org/
-Vcs-Git: https://anonscm.debian.org/git/pkg-security/nmap.git
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-security/nmap.git
+Vcs-Git: https://salsa.debian.org/pkg-security-team/nmap.git
+Vcs-Browser: https://salsa.debian.org/pkg-security-team/nmap
 
 Package: nmap
 Architecture: any
