--- a/debian/control
+++ b/debian/control
@@ -74,7 +74,8 @@ Depends: ndiff,
 Provides: nmapfe
 Conflicts: nmapfe
 Replaces: nmapfe
-Recommends: python-pysqlite2
+Recommends: policykit-1,
+            python-pysqlite2
 Description: The Network Mapper Front End
  Zenmap is an Nmap frontend. It is meant to be useful for advanced users
  and to make Nmap easy to use by beginners. It was originally derived
