Revert "d/control: zenmap: move polkit from Recommends to Depends"
This reverts commit a04c08c10f629cc5df62c445bba8b5423cedd442.

--- a/debian/control
+++ b/debian/control
@@ -66,7 +66,6 @@ Package: zenmap
 Architecture: all
 Depends: ndiff,
          nmap,
-         policykit-1,
          python-gobject-2 | python-gobject,
          python-gtk2,
          ${misc:Depends},
@@ -75,7 +74,8 @@ Depends: ndiff,
 Provides: nmapfe
 Conflicts: nmapfe
 Replaces: nmapfe
-Recommends: python-pysqlite2
+Recommends: policykit-1,
+            python-pysqlite2
 Description: The Network Mapper Front End
  Zenmap is an Nmap frontend. It is meant to be useful for advanced users
  and to make Nmap easy to use by beginners. It was originally derived
