--- a/debian/rules
+++ b/debian/rules
@@ -20,7 +20,7 @@ override_dh_auto_configure:
 override_dh_auto_build-indep:
 	dh_auto_build
 	cd nselib/data/jdwp-class && /usr/lib/jvm/default-java/bin/javac *.java
-	cd nselib/data/psexec && i686-w64-mingw32-gcc -o nmap_service.exe nmap_service.c
+	cd nselib/data/psexec && i686-w64-mingw32-gcc ${CPPFLAGS} ${CFLAGS} -o nmap_service.exe nmap_service.c
 
 override_dh_auto_test:
 
