--- a/debian/control
+++ b/debian/control
@@ -8,15 +8,15 @@ Build-Depends: bison,
                debhelper (>=12~),
                dh-python,
                flex,
-               libgtk2.0-dev,
                liblinear-dev,
                liblua5.3-dev,
                libpcap0.8-dev,
                libpcre3-dev,
                libssh2-1-dev,
                libssl-dev,
+               zlib1g-dev,
                lua-lpeg-dev,
-               python
+               python,
 Build-Depends-Indep: default-jdk-headless,
                      gcc-mingw-w64-i686
 Standards-Version: 4.4.0
@@ -61,25 +61,6 @@ Description: Architecture independent files for nmap
  devices are also supported, including the Sharp Zaurus and the iPAQ.
  .
  This package contains the nmap files shared by all architectures.
-
-Package: zenmap
-Architecture: all
-Depends: ndiff,
-         nmap,
-         python-gobject-2 | python-gobject,
-         python-gtk2,
-         ${misc:Depends},
-         ${python:Depends},
-         ${shlibs:Depends}
-Provides: nmapfe
-Conflicts: nmapfe
-Replaces: nmapfe
-Recommends: policykit-1,
-            python-pysqlite2
-Description: The Network Mapper Front End
- Zenmap is an Nmap frontend. It is meant to be useful for advanced users
- and to make Nmap easy to use by beginners. It was originally derived
- from Umit, an Nmap GUI created as part of the Google Summer of Code.
 
 Package: ndiff
 Architecture: all
