--- a/debian/control
+++ b/debian/control
@@ -20,6 +20,7 @@ Build-Depends: bison,
 Build-Depends-Indep: default-jdk-headless,
                      gcc-mingw-w64-i686
 Standards-Version: 4.4.1
+Rules-Requires-Root: no
 Homepage: https://nmap.org/
 Vcs-Git: https://salsa.debian.org/pkg-security-team/nmap.git
 Vcs-Browser: https://salsa.debian.org/pkg-security-team/nmap
