--- a/debian/rules
+++ b/debian/rules
@@ -29,7 +29,9 @@ override_dh_auto_build-indep:
 	dh_auto_build
 	dh_auto_build --sourcedir=ndiff --buildsystem=pybuild
 	cd nselib/data/jdwp-class && /usr/lib/jvm/default-java/bin/javac *.java
-	cd nselib/data/psexec && i686-w64-mingw32-gcc ${CPPFLAGS} ${CFLAGS} -o nmap_service.exe nmap_service.c
+	cd nselib/data/psexec && \
+		i686-w64-mingw32-gcc ${CPPFLAGS} ${CFLAGS} -o nmap_service.exe nmap_service.c && \
+		gzip -c -9 nmap_service.exe | base64 | tac > nmap_service.ex_
 
 override_dh_auto_test:
 	dh_auto_test
@@ -41,7 +43,7 @@ override_dh_auto_install:
 	mv debian/tmp/usr/share/man/pt_PT debian/tmp/usr/share/man/pt
 
 override_dh_missing:
-	dh_missing -X/usr/bin/uninstall_ -Xca-bundle.crt -X.pyc --fail-missing
+	dh_missing -X/usr/bin/uninstall_ -Xca-bundle.crt -X.pyc -Xnmap_service.exe --fail-missing
 
 override_dh_install:
-	dh_install -X/usr/bin/uninstall_ -Xca-bundle.crt -X.pyc
+	dh_install -X/usr/bin/uninstall_ -Xca-bundle.crt -X.pyc -Xnmap_service.exe
